# osdev

./: CMakeLists.txt  Makefile  run.bat
OVMFbin/: OVMF_VARS-pure-efi.fd
dependencies/OVMF/: OVMF_VARS-pure-efi.fd
dependencies/gnu-efi/: .gitignore
dependencies/gnu-efi/bootloader/: main.c  main.efi
gnu-efi/bootloader/: main.c
kernel/: Makefile  kernel.ld
kernel/src/: interrupts.c  interrupts.h  io.h  kernel.c  types.h
src/kernel/: Makefile  acpi.c  acpi.h  asm.h  config.h  gdt.nasm  interrupts.c  interrupts.h  interrupts.nasm  kernel.c  keyboard.c  keyboard.h  libk.c  libk.h  mouse.c  mouse.h  panic.c  panic.h  renderer.c  renderer.h  renderer_internal.h  start.nasm  types.h
